# humanoid-lib

./: .gitignore  README.md  exclude.txt  sync.sh
src/darknetcxx/: CMakeLists.txt
src/darknetcxx/include/darknetcxx/: box.hpp  detector.hpp  image.hpp
src/darknetcxx/src/layer/convolutional/: convolutional.cpp
src/darknetcxx/src/layer/region/: box.cpp
src/darknetcxx/src/network/: detector.cpp
src/darknetcxx/src/types/: image.cpp
src/dcommon/: CMakeLists.txt
src/dcommon/include/dcommon/: dcommon.hpp
src/dmsgs/: CMakeLists.txt
src/dmsgs/msg/: BehaviorInfo.msg  GCInfo.msg  MotionInfo.msg  TeamInfo.msg  VisionInfo.msg
src/dprocess/include/dprocess/: dprocess.hpp
src/vision_opencv/cv_bridge/: CMakeLists.txt
src/vision_opencv/cv_bridge/src/: CMakeLists.txt
